# kite-copier

./: .gitignore  aqd468.bat  freeze.yaml  ignore.yaml  lotsize.yaml  make.in  package-lock.json  package.json  pyproject.toml  requirements.txt  run_algo.bat  run_server.bat  settings.yml  tailwind.config.js  update.bat  users_kite.xlsx
kite_copier/: aqd468.py  constants.py  copier.py  delete_full.py  helper.py  jsondb.py  login_get_kite.py  main.py  orders.json  server.py  strategy.py  symbols.py  test_copier.py  test_kite.py  trades.json  user.py  wserver.py
kite_copier/copier/: copier.py
kite_copier/static/: autocomplete.css  autocomplete.js  main.css  main.js  new.js  old.js  positions.js  requests.js  spread.js
kite_copier/templates/: base.html  index.html  new.html  orders copy.html  orders.html  orders_modify.html  pandas.html  positions.html  table.html  users.html  ws.html
kite_copier/tests/: big.py  orders.json  small.py  test_bypass.py  test_copier.py  test_iceberg.py  test_jsondb.py  test_str_to_np_arr.py  test_strategy.py  test_time.py
