[tool.poetry]
name = "kite-copier"
version = "0.1.0"
description = ""
authors = ["prog <prog@ecomsense.in>"]
readme = "README.md"
packages = [{include = "omspy_brokers"}]

[tool.poetry.dependencies]
python = "^3.9"
omspy = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
